[gd_scene load_steps=28 format=3 uid="uid://p42ftxav826i"]

[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="1_jwo5m"]
[ext_resource type="Script" path="res://Scripts/options_label.gd" id="1_w68ec"]
[ext_resource type="Animation" uid="uid://dubl7bhagft8i" path="res://fade_to_black_animation.res" id="3_4xbgd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8g2bq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cc4vr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_10pkl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u2vld"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6n5mx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kygko"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tmfop"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t0un1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g8lcn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ceb75"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2oed8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g6wm1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xjqrc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8mm1r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_36j31"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ue37i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yrkgo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_102qe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w3lhd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_05ri7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pv4a8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lls5p"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0

[sub_resource type="Animation" id="Animation_yuq8i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect/MoleculeLabel:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MainPauseMenu/VBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pae46"]
_data = {
"RESET": SubResource("Animation_yuq8i"),
"fade_to_black": ExtResource("3_4xbgd")
}

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jwo5m")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="MoleculeLabel" type="Label" parent="ColorRect"]
custom_minimum_size = Vector2(0, -50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -153.5
offset_top = -43.0
offset_right = 153.5
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(1, 1, 1, 0)
theme_override_font_sizes/font_size = 62
text = "Molecule1
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainPauseMenu" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 71.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainPauseMenu"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MainPauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 550

[node name="ResumeButton" type="Button" parent="MainPauseMenu/VBoxContainer"]
z_index = 4
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_mode = 0
theme_override_colors/font_disabled_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_8g2bq")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_cc4vr")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_10pkl")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_u2vld")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_6n5mx")
theme_override_styles/hover = SubResource("StyleBoxEmpty_kygko")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_tmfop")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_t0un1")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_g8lcn")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ceb75")
text = "Resume"
alignment = 0

[node name="MarginContainer2" type="MarginContainer" parent="MainPauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 15

[node name="Molecule Manager" type="Button" parent="MainPauseMenu/VBoxContainer"]
z_index = 4
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_mode = 0
theme_override_colors/font_disabled_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_8g2bq")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_cc4vr")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_10pkl")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_u2vld")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_6n5mx")
theme_override_styles/hover = SubResource("StyleBoxEmpty_kygko")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_tmfop")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_t0un1")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_g8lcn")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ceb75")
text = "Molecule Management"
alignment = 0

[node name="MarginContainer5" type="MarginContainer" parent="MainPauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 15

[node name="OptionButton" type="Button" parent="MainPauseMenu/VBoxContainer"]
z_index = 4
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_mode = 0
theme_override_colors/font_disabled_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_2oed8")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_8g2bq")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_cc4vr")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_10pkl")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_u2vld")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_6n5mx")
theme_override_styles/hover = SubResource("StyleBoxEmpty_kygko")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_tmfop")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_t0un1")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_g8lcn")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ceb75")
text = "Options
"
alignment = 0

[node name="MarginContainer3" type="MarginContainer" parent="MainPauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 15

[node name="BackToMainButton2" type="Button" parent="MainPauseMenu/VBoxContainer"]
z_index = 4
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_mode = 0
theme_override_colors/font_disabled_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_2oed8")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_8g2bq")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_cc4vr")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_10pkl")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_u2vld")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_6n5mx")
theme_override_styles/hover = SubResource("StyleBoxEmpty_kygko")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_tmfop")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_t0un1")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_g8lcn")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ceb75")
text = "Back to Main Menu
"
alignment = 0

[node name="OptionMenu" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 80

[node name="VBoxContainer" type="VBoxContainer" parent="OptionMenu"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="OptionMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 450

[node name="Options Label" type="Label" parent="OptionMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 50
text = "Options
"
script = ExtResource("1_w68ec")

[node name="MarginContainer2" type="MarginContainer" parent="OptionMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 40

[node name="HBoxContainer" type="HBoxContainer" parent="OptionMenu/VBoxContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="OptionMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Music
"

[node name="MarginContainer" type="MarginContainer" parent="OptionMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 0

[node name="MusicOnOffButton" type="Button" parent="OptionMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_mode = 0
theme_override_colors/font_disabled_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_g6wm1")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_xjqrc")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8mm1r")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_36j31")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ue37i")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_yrkgo")
theme_override_styles/hover = SubResource("StyleBoxEmpty_102qe")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_w3lhd")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_05ri7")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_pv4a8")
theme_override_styles/normal = SubResource("StyleBoxEmpty_lls5p")
text = "< ON >
"
alignment = 0

[node name="MarginContainer3" type="MarginContainer" parent="OptionMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 50

[node name="BackToPauseScreenButton" type="Button" parent="OptionMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_mode = 0
theme_override_colors/font_disabled_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_2oed8")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_8g2bq")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_cc4vr")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_10pkl")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_u2vld")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_6n5mx")
theme_override_styles/hover = SubResource("StyleBoxEmpty_kygko")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_tmfop")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_t0un1")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_g8lcn")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ceb75")
text = "Back
"
alignment = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pae46")
}

[node name="MoleculeManagementMenu" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MoleculeManagementMenu"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MoleculeManagementMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 450

[node name="Options Label" type="Label" parent="MoleculeManagementMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 50
text = "Molecule Management
"
script = ExtResource("1_w68ec")

[node name="MarginContainer2" type="MarginContainer" parent="MoleculeManagementMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 40

[node name="ImportMoleculeHbox" type="HBoxContainer" parent="MoleculeManagementMenu/VBoxContainer"]
layout_mode = 2

[node name="ImportZmatButton" type="Button" parent="MoleculeManagementMenu/VBoxContainer/ImportMoleculeHbox"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_mode = 0
theme_override_colors/font_disabled_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_g6wm1")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_xjqrc")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8mm1r")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_36j31")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ue37i")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_yrkgo")
theme_override_styles/hover = SubResource("StyleBoxEmpty_102qe")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_w3lhd")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_05ri7")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_pv4a8")
theme_override_styles/normal = SubResource("StyleBoxEmpty_lls5p")
text = "Import Molecule as Z-Matrix
"
alignment = 0

[node name="MarginContainer3" type="MarginContainer" parent="MoleculeManagementMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 50

[node name="BackToPauseScreenButton" type="Button" parent="MoleculeManagementMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_mode = 0
theme_override_colors/font_disabled_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_2oed8")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_8g2bq")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_cc4vr")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_10pkl")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_u2vld")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_6n5mx")
theme_override_styles/hover = SubResource("StyleBoxEmpty_kygko")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_tmfop")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_t0un1")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_g8lcn")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ceb75")
text = "Back
"
alignment = 0

[node name="Label" type="Label" parent="."]
offset_left = 82.0
offset_top = 51.0
offset_right = 389.0
offset_bottom = 137.0
size_flags_horizontal = 0
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 62
text = "Molecule1
"

[connection signal="pressed" from="MainPauseMenu/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MainPauseMenu/VBoxContainer/Molecule Manager" to="." method="_on_molecule_management_button_pressed"]
[connection signal="pressed" from="MainPauseMenu/VBoxContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="MainPauseMenu/VBoxContainer/BackToMainButton2" to="." method="_on_back_to_main_button_pressed"]
[connection signal="pressed" from="OptionMenu/VBoxContainer/BackToPauseScreenButton" to="." method="_on_back_to_pause_screen_button_pressed"]
[connection signal="pressed" from="MoleculeManagementMenu/VBoxContainer/ImportMoleculeHbox/ImportZmatButton" to="." method="_on_import_zmat_pressed"]
[connection signal="pressed" from="MoleculeManagementMenu/VBoxContainer/BackToPauseScreenButton" to="." method="_on_back_to_pause_screen_button_pressed"]
